Fix for deep folder path breadcrumb wrapping in doclib
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10783 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 5a0d5ed5dd341482e006c82ec3b505bb5dc5190d

--- a/root/projects/slingshot/source/web/components/documentlibrary/toolbar.css
+++ b/root/projects/slingshot/source/web/components/documentlibrary/toolbar.css
@@ -87,6 +87,11 @@
    background-image: url(images/select-none-16.png);
 }
 
+.toolbar .rss-feed
+{
+   padding: 0.5em;
+}
+
 
 /* Navigation Bar */
 
@@ -96,9 +101,9 @@
    border-bottom: 2px solid #c7ccce;
 }
 
-.toolbar .breadcrumb,
-.toolbar .rss-feed
+.toolbar .breadcrumb
 {
+   float: none !important;
    padding: 0.5em;
 }
 
